deploy/overlays/staging/replicas_count.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sjg-data-backend
spec:
  replicas: 1
