deploy/overlays/staging/set_env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sjg-data-backend
spec:
  template:
    spec:
      containers:
        - name: sjg-data-backend
