deploy/overlays/staging/set_image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sjg-data-backend
spec:
  template:
    spec:
      nodeSelector:
        eks.amazonaws.com/capacityType: SPOT
      containers:
        - name: sjg-data-backend
          image: sjg-data-backend:latest
