deploy/overlays/staging/set_resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sjg-data-backend
spec:
  template:
    spec:
      containers:
        - name: sjg-data-backend
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
