deploy/overlays/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sjg-data-backend
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
  type: NodePort
  selector:
    app: sjg-data-backend
