deploy/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sjg-data-backend
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/group.name: coloseo
spec:
  ingressClassName: alb-ingress-class
  rules:
    - host: gamedata.coloseo.online
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: sjg-data-backend
                port:
                  number: 8080
